# TcpServer

./: .gitignore  LICENSE  Makefile  README.md  auto_conf  do_configure.sh  meson.build  meson_options.txt
examples/: meson.build
examples/fileTransfer/: fileTransfer.cpp  meson.build
examples/pingPong/: meson.build  pingPong.cpp
src/: .tcpServer.cpp.kate-swp  log.h  meson.build  sysdep.h  tcpServer.cpp  tcpServer.h  tcpService.cpp
tests/: meson.build
tests/benchmark/: main.cpp  meson.build
tests/unit/: meson.build
